--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.8",
     "numpy>=2.4.1",
+    "tqdm>=4.67.1",
     "trimesh>=4.11.0",
 ]
 
